--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,20 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: docker login
+    - name: Docker Login
       env:
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-       docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
     - name: Build the Docker image
-      run: docker build --tag ${{secrets.DOCKER_USER}}/jobinfo:latest .
-    - name: docker push
-      run: docker push ${{secrets.DOCKER_USER}}/jobinfo:latest
+      run: docker build --tag ${{ secrets.DOCKER_USER }}/jobinfo:latest .
+    - name: Docker Push
+      run: docker push ${{ secrets.DOCKER_USER }}/jobinfo:latest
